Fix name overlap on ArchetypeMatrix
Fixes #498

--- a/hsreplaynet/static/styles/meta_overview.scss
+++ b/hsreplaynet/static/styles/meta_overview.scss
@@ -140,6 +140,13 @@
 			display: none;
 		}
 
+		.header-archetype-name {
+			width: 70px;
+			margin: 0 1px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+
 		&.matchup-column-header-archetype {
 			&.ignored {
 				.header-archetype-name {
